<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sensor.chamber.ChamberTestActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="3dp"
                android:textColor="#fff"
                android:textSize="32sp"
                app:background="@{``}"
                tools:background="@color/primary"
                tools:text="Fluoride" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:textColor="#e2e2e2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:background="@{``}"
                tools:background="@color/primary"
                tools:text="@string/times_dilution" />

            <LinearLayout
                android:id="@+id/resultLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:textSize="50sp"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="#333"
                    android:textSize="20sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    tools:text="Calcium:" />

                <TextView
                    android:id="@+id/textResult1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="#333"
                    android:textSize="20sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    tools:text="Magnesium:" />

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="15000" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="#333"
                    android:textSize="20sp"
                    tools:text="mg/l" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAccept"
                style="@style/Button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="onClickAcceptResult"
                android:text="@string/accept_result"
                android:theme="?primaryButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dilutionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="#e9e9e9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/high_level_recommendation"
                android:textColor="#444"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_instructions"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_flipped_play_arrow"
                android:onClick="onTestWithDilution"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/test_with_dilution"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>