<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.akvo.caddisfly.viewmodel.TestInfoViewModel" />

        <import type="android.view.View" />

        <import type="org.akvo.caddisfly.util.ExtensionUtilKt" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            app:background="@{vm.test.name}"
            tools:background="?colorPrimary">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@{ExtensionUtilKt.toLocalString(vm.test.name)}"
                android:textColor="#fff"
                android:textSize="30sp"
                tools:text="Contaminant" />

            <TextView
                android:id="@+id/textDilution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:paddingBottom="20dp"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/no_dilution" />

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_device"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/button_green"
                android:orientation="vertical"
                android:visibility="gone">

                <org.akvo.caddisfly.widget.TimerView
                    android:id="@+id/countdownTimer"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:visibility="gone"
                    app:circleColor="#016ec6" />

                <TextView
                    android:id="@+id/textTimeRemaining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:paddingTop="16dp"
                    android:textSize="32dp"
                    tools:ignore="SpUsage"
                    tools:text="00:05:00" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/layoutWait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/timeLayout"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageIllustration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/place_device"
                    android:visibility="@{View.VISIBLE}" />

                <FrameLayout
                    android:id="@+id/camera_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:visibility="@{View.GONE}"
                    tools:visibility="gone" />

                <org.akvo.caddisfly.widget.CircleView
                    android:id="@+id/circleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{View.GONE}"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/startCaptureButton"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:enabled="true"
                    android:minWidth="230dp"
                    android:onClick="onStartTestClick"
                    android:text="@string/start"
                    android:theme="?primaryButtonStyle"
                    android:visibility="gone" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>